# OneNet_MiCOKit

./: README.md
application/onenet_micokit/: device_config.c  device_oled.c  device_ota.c  device_sensor.c  device_sensor.h  mico_app_define.h  mico_config.h  mico_main.c  onenet_micokit.mk
lib/onenet/: onenet.h  onenet.mk  onenet_conf.h
lib/onenet/app_para_storage/: app_para_storage.c  app_para_storage.h  app_para_storage.mk
lib/onenet/onenet_server/: onenet_bonjour.c  onenet_bonjour.h  onenet_init.c  onenet_mico_platform.c  onenet_mico_platform.h  onenet_queue.c  onenet_queue.h  onenet_server.c
lib/onenet/regina_conf/: conf.c  conf.h  service_conf
lib/onenet/schema_src/: regina_configuration.c  regina_configuration.h  regina_event.c  regina_event.h  regina_notification.c  regina_notification.h  regina_profile.c  regina_profile.h  regina_sensor_data.c  regina_sensor_data.h
lib/onenet/sdk-c-1.0/: CMakeLists.txt  README.md
lib/onenet/sdk-c-1.0/documents/: SDK C 使用说明.docx  移植sdk-c说明文档.docx
lib/onenet/sdk-c-1.0/include/regina/: allocator.h  avro_io.h  device.h  encoding.h  error.h  log.h  platform.h  regina_common_schema.h  regina_list.h
lib/onenet/sdk-c-1.0/sample/: CMakeLists.txt  conf.c  regina_configuration.c  regina_configuration.h  regina_event.c  regina_event.h  regina_notification.c  regina_notification.h  regina_profile.c  regina_profile.h  regina_sensor_data.c  regina_sensor_data.h  sample.c
lib/onenet/sdk-c-1.0/src/: acc_dev_gen.c  acc_dev_gen.h  acceptor.c  acceptor.h  access_point.h  auth_service.c  auth_service.h  avro_private.h  bootstrap.c  bootstrap.h  bs_dev_gen.c  bs_dev_gen.h  channel.c  channel.h  common.h  compression.c  compression.h  configuration_service.c  configuration_service.h  device.c  device_status.c  device_status.h  device_status_gen.c  device_status_gen.h  encoding_binary.c  event_service.c  event_service.h  extent.h  io.c  log.c  notification_service.c  notification_service.h  profile_service.c  profile_service.h  regina_common_schema.c  regina_config.c  regina_config.h  regina_list.c  regina_tcp_protocol.c  regina_tcp_protocol.h  (+15 more)
